ユーザー作成

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -8,15 +8,15 @@
       = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
         = devise_error_messages!
         .field
-          .field-label 
-            = f.label :写真
-          .image-label
-          - if @user.image.present?
-            = image_tag "#{(@user.image).to_s}", width: "112", height: "112", alt: "preview", id: :img_prev
-          - else
-            = image_tag "member_photo_noimage_thumb.png", width: "112", height: "112", alt: "preview", id: :img_prev
-          .field-input
-            = f.file_field :image,id: :user_img
+          -# .field-label 
+          -#   = f.label :写真
+          -# .image-label
+          -# - if @user.image.present?
+          -#   = image_tag "#{(@user.image).to_s}", width: "112", height: "112", alt: "preview", id: :img_prev
+          -# - else
+          -#   = image_tag "member_photo_noimage_thumb.png", width: "112", height: "112", alt: "preview", id: :img_prev
+          -# .field-input
+          -#   = f.file_field :image,id: :user_img
           .field-label
             = f.label :名前
             %i (6文字以下)
@@ -27,6 +27,11 @@
             = f.label :email
           .field-input
             = f.email_field :email
+        .field
+          .field-label
+            = f.label :area
+          .field-select
+            = f.collection_select :area, Areahash.all, :id, :name, prompt: "選択してください"
         .field
           .field-label
             = f.label :password
