ヘッダーリンク変更

--- a/app/views/tops/_header.html.haml
+++ b/app/views/tops/_header.html.haml
@@ -3,10 +3,10 @@
     らぐマチ
   .headerContent__rightBox
     - if user_signed_in?
-      = link_to 'ログアウト','/', class: "headerContent__rightBox--items", method: :delete  
+      = link_to 'ログアウト', destroy_user_session_path, class: "headerContent__rightBox--items", method: :delete  
       = link_to 'マイページ','/',  class: "headerContent__rightBox--items"         
     - else 
-      = link_to '新規作成','/', class: "headerContent__rightBox--items"   
+      = link_to '新規作成', new_user_registration_path, class: "headerContent__rightBox--items"   
       = link_to 'ログイン', new_user_session_path,  class: "headerContent__rightBox--items"         
     %i.fas.fa-bars
     %ul.humburgerMenu 
