--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -8,17 +8,17 @@
       = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
         = devise_error_messages!
         .field
-          -# .field-label 
-          -#   = f.label :写真
-          -# .image-label
-          -# - if @user.image.present?
-          -#   = image_tag "#{(@user.image).to_s}", width: "112", height: "112", alt: "preview", id: :img_prev
-          -# - else
-          -#   = image_tag "member_photo_noimage_thumb.png", width: "112", height: "112", alt: "preview", id: :img_prev
-          -# .field-input
-          -#   = f.file_field :image,id: :user_img
+          .field-label 
+            = f.label :写真
+          .image-label
+          - if @user.image.present?
+            = image_tag "#{(@user.image).to_s}", width: "112", height: "112", alt: "preview", id: :img_prev
+          - else
+            = image_tag "member_photo_noimage_thumb.png", width: "112", height: "112", alt: "preview", id: :img_prev
+          .field-input
+            = f.file_field :image,id: :user_img
           .field-label
-            = f.label :名前
+            = f.label :name
             %i (6文字以下)
           .field-input
             = f.text_field :name, autofocus: true
@@ -43,5 +43,10 @@
             = f.label :password_confirmation
           .field-input
             = f.password_field :password_confirmation, autocomplete: "off"
+        .field
+          .field-label
+            = f.label :introduction
+          .field-input
+            = f.text_field :introduction, autofocus: true, autocomplete: "introduction", class: 'introduction-text'
         .actions
           = f.submit "アカウント作成", class: 'btn'
