--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -9,12 +9,10 @@
         = devise_error_messages!
         .field
           .field-label 
-            = f.label :写真
+            = f.label :image
           .image-label
-          - if @user.image.present?
-            = image_tag "#{(@user.image).to_s}", width: "112", height: "112", alt: "preview", id: :img_prev
-          - else
             = image_tag "member_photo_noimage_thumb.png", width: "112", height: "112", alt: "preview", id: :img_prev
+        .field
           .field-input
             = f.file_field :image,id: :user_img
           .field-label
