--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -53,6 +53,7 @@
   line-height: 3vh;
   transition: all 0.6s ease;
   display: flex;
+  justify-content: flex-end;
   visibility: hidden;
   z-index: 2 !important;
   opacity: 0.1;
