--- a/app/views/devise/shared/_links.html.haml
+++ b/app/views/devise/shared/_links.html.haml
@@ -1,7 +1,9 @@
 - if controller_name != 'sessions'
   = link_to "ログイン", new_session_path(resource_name), class: 'btn'
+  = link_to "トップページ", root_path, class: 'btn'
   %br/
 - if devise_mapping.registerable? && controller_name != 'registrations'
   = link_to "新規登録", new_registration_path(resource_name), class: 'btn'
+  = link_to "トップページ", root_path, class: 'btn'
   %br/
   
