--- a/app/assets/stylesheets/modules/_footer.scss
+++ b/app/assets/stylesheets/modules/_footer.scss
@@ -8,6 +8,9 @@
   bottom: 0;
   height: 10vh;
   line-height: 10vh;
+  border-top:solid;
+  border-color:rgba(0, 0, 0, 0.74);
+  border-width:2px;
   text-shadow    : 
   3px  3px 2px rgba(0, 0, 0, 0.74),
  -3px  3px 2px rgba(0, 0, 0, 0.74),
