--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -12,7 +12,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  text-shadow    : 
+  border-bottom:solid;
+  border-color:rgba(0, 0, 0, 0.74);
+  border-width:2px;
+  text-shadow    :
   3px  3px 2px rgba(0, 0, 0, 0.74),
  -3px  3px 2px rgba(0, 0, 0, 0.74),
   3px -3px 2px rgba(0, 0, 0, 0.74),
@@ -20,7 +23,7 @@
   3px  0px 2px rgba(0, 0, 0, 0.74),
   0px  3px 2px rgba(0, 0, 0, 0.74),
  -3px  0px 2px rgba(0, 0, 0, 0.74),
-  0px -3px 2px rgba(0, 0, 0, 0.74);    
+  0px -3px 2px rgba(0, 0, 0, 0.74);
 
   &__leftBox {
     margin-left: 2%;
@@ -78,7 +81,7 @@
     opacity: 1;
 
     &::after {
-      background-color:white;
+      background-color:rgba(0, 0, 0, 0.74);
       bottom: 0;
       content: "";
       display: block;
