--- a/app/views/tops/_header.html.haml
+++ b/app/views/tops/_header.html.haml
@@ -4,7 +4,7 @@
   .headerContent__rightBox
     - if user_signed_in?
       = link_to 'ログアウト', destroy_user_session_path, class: "headerContent__rightBox--items", method: :delete  
-      = link_to 'マイページ','/',  class: "headerContent__rightBox--items"         
+      = link_to 'マイページ',user_path(current_user),  class: "headerContent__rightBox--items"         
     - else 
       = link_to '新規作成', new_user_registration_path, class: "headerContent__rightBox--items"   
       = link_to 'ログイン', new_user_session_path,  class: "headerContent__rightBox--items"         
