マイページ実装完了

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,4 +7,5 @@
 @import "modules/_header.scss";
 @import "modules/top_content";
 @import "modules/_footer.scss";
+@import "mypage.scss";
 @import "modules/flash";
