ハンバーガーメニュー調整

--- a/app/assets/stylesheets/mypage.scss
+++ b/app/assets/stylesheets/mypage.scss
@@ -3,15 +3,16 @@
   height: 100%;
   &__profile {
     margin: 0 auto;
-    width: 526px;
-    height: 717px;
+    width: 500px;
+    height: 650px;
     position: relative;
-    padding-top: 7rem;
+    padding-top: 6rem;
     &__title-box {
       &__title {
-        letter-spacing: 1em;
+        letter-spacing: 1rem;
         font-size: 25px;
         font-weight: bold;
+        padding-bottom: 0.1rem;
       }
     }
     &__main {
