--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -21,8 +21,8 @@
           チーム紹介
         .mypage-content__profile__main__introduction-box__introduction
           = safe_join(@user.introduction.split("\n"),tag(:br))
-      .mypage-content__profile__main__blank-box
-      .mypage-content__profile__main__user-box
-        - if @user.id == current_user.id
-          = link_to edit_user_path, class: "btn-edit" do
-            = icon('fas', 'cog')
+      -# .mypage-content__profile__main__blank-box
+      -# .mypage-content__profile__main__user-box
+      -#   - if @user.id == current_user.id
+      -#     = link_to edit_user_path, class: "btn-edit" do
+      -#       = icon('fas', 'cog')
