[WIP]メンバー募集機能

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,5 +7,6 @@
 @import "modules/_header.scss";
 @import "modules/top_content";
 @import "modules/_footer.scss";
+@import "modules/_groups_new.scss";
 @import "mypage.scss";
 @import "modules/flash";
