--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -18,7 +18,7 @@
           = @area.name
       .mypage-content__profile__main__introduction-box
         .mypage-content__profile__main__introduction-box__title
-          チーム紹介
+          自己紹介
         .mypage-content__profile__main__introduction-box__introduction
           = safe_join(@user.introduction.split("\n"),tag(:br))
       -# .mypage-content__profile__main__blank-box
