--- a/app/assets/stylesheets/modules/_groups_new.scss
+++ b/app/assets/stylesheets/modules/_groups_new.scss
@@ -29,7 +29,6 @@
       margin-top: 20px;
       height: 55px;
       padding-left: 5px;
-      border-radius: 5px;
     }
     &__area{
       padding: 5px;
@@ -72,4 +71,11 @@
       }
     }
   }
+}
+
+select#recruitment_area{
+  width: 100%;
+  height: 3rem;
+  margin-top:20px;
+  
 }
