--- a/app/views/recruitments/new.html.haml
+++ b/app/views/recruitments/new.html.haml
@@ -20,15 +20,15 @@
           必須
         %br/
         = f.collection_select :area, Areahash.all, :id, :name, prompt: "選択してください"
-      -# .field.groupsForm__category--low
-      -#   %div.groupsForm__category
-      -#     = f.label :"カテゴリ"
-      -#     %span.groupsForm__categorySelect
-      -#       （複数選択可）
-      -#     %span.groupsForm__required
-      -#       必須
-      -#   = f.collection_check_boxes(:category_ids, Category.all, :id, :name) do |category|
-      -#     = category.label do
-      -#       = category.check_box
-      -#       = category.text
+      .field.groupsForm__category--low
+        %div.groupsForm__category
+          = f.label :"カテゴリ"
+          %span.groupsForm__categorySelect
+            （複数選択可）
+          %span.groupsForm__required
+            必須
+        = f.collection_check_boxes(:category_ids, Category.all, :id, :name) do |category|
+          = category.label do
+            = category.check_box
+            = category.text
       = f.submit "募集する", class: "groupsForm__submit"
