--- a/app/views/recruitments/new.html.haml
+++ b/app/views/recruitments/new.html.haml
@@ -27,7 +27,7 @@
             （複数選択可）
           %span.groupsForm__required
             必須
-        = f.collection_check_boxes(:category_id, Category.all, :id, :name) do |category|
+        = f.collection_check_boxes(:category_ids, Category.all, :id, :name) do |category|
           = category.label do
             = category.check_box
             = category.text
