--- a/app/views/tops/_header.html.haml
+++ b/app/views/tops/_header.html.haml
@@ -5,10 +5,12 @@
     %i.fas.fa-bars
     %ul.humburgerMenu 
       %li
-        = link_to '募集をする',new_recruitment_path, class: "humburgerMenu__item"
       - if user_signed_in?
         = link_to 'マイページ',user_path(current_user),  class: "humburgerMenu__item"         
+        = link_to '募集をする',new_recruitment_path, class: "humburgerMenu__item"
+        = link_to 'チームを探す',tops_path, class: "humburgerMenu__item"
         = link_to 'ログアウト', destroy_user_session_path, class: "humburgerMenu__item", method: :delete  
       - else 
         = link_to '新規作成', new_user_registration_path, class: "humburgerMenu__item"   
+        = link_to 'チームを探す',tops_path, class: "humburgerMenu__item"
         = link_to 'ログイン', new_user_session_path,  class: "humburgerMenu__item"
