[WIP]募集一覧表示

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,4 +9,5 @@
 @import "modules/_footer.scss";
 @import "modules/_groups_new.scss";
 @import "mypage.scss";
+@import "modules/recruitment.scss";
 @import "modules/flash";
