--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,4 +10,6 @@
 @import "modules/_groups_new.scss";
 @import "mypage.scss";
 @import "modules/recruitment.scss";
+@import "modules/rooms";
+@import "modules/directmessages";
 @import "modules/flash";
