--- a/app/views/tops/index.html.haml
+++ b/app/views/tops/index.html.haml
@@ -13,7 +13,7 @@
               = post.user.name
           .recruitment__content__box1__place
             エリア :
-            = @area.name
+            -# = @area.name
         .recruitment__content__box2
           .recruitment__content__box2__introduction
             紹介文 :
