DMリンク整備

--- a/app/views/tops/index.html.haml
+++ b/app/views/tops/index.html.haml
@@ -22,4 +22,4 @@
       -#   カテゴリ :
       -#   = post.category
       .recruitment__content__application-btn
-        = link_to "連絡を取る","/"
+        = link_to "連絡を取る",user_path(post.user_id)
