--- a/app/assets/stylesheets/modules/_rooms.scss
+++ b/app/assets/stylesheets/modules/_rooms.scss
@@ -6,14 +6,14 @@
   margin-top: 10vh;
   &__left {
     width: 21rem;
-    // height: 100%;
+    height: 100%;
     overflow: scroll;
   }
   // メッセージ
   &__center {
     background-color: #fff;
     width: calc(100% - 21rem);
-    // height: 100%;
+    height: 100%;
     border-right: solid 1px #EEEEEE;
     border-left: solid 1px #EEEEEE;
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.125);
@@ -46,10 +46,10 @@
       }
     }
     &__main {
-      height: calc(100% - 235px);
+      height: calc(100% - 10vh - 154px);
       border-bottom: solid 2px #e8e8e8;
       padding: 20px;
-      overflow: auto;
+      overflow-y: scroll;
       background:
       linear-gradient(white 30%, rgba(255,255,255,0)),
       linear-gradient(rgba(255,255,255,0), white 70%) 0 100%,
@@ -100,7 +100,7 @@
     }
     &__bottom {
       padding: 20px 45px;
-      .new_directmessage {
+      .new_dm {
         width: 100%;
         display: flex;
         font-size: 20px;
