募集ボタン編集

--- a/app/views/tops/index.html.haml
+++ b/app/views/tops/index.html.haml
@@ -21,5 +21,4 @@
       -# .recruitment__content__category
       -#   カテゴリ :
       -#   = post.category
-      .recruitment__content__application-btn
-        = link_to "連絡を取る",user_path(post.user_id)
+      = link_to "連絡を取る",user_path(post.user_id), class: "recruitment__content__application-btn"
