--- a/app/assets/stylesheets/modules/recruitment.scss
+++ b/app/assets/stylesheets/modules/recruitment.scss
@@ -27,10 +27,10 @@
     &__application-btn{
       margin: auto;
       font-size: 1rem;
-      padding: 6px 20px 6px 20px;
+      padding: 10px 100px 10px 100px;
       text-align: center;
       text-decoration: none;
-      background: rgba(25, 0, 255, 0.685);
+      background-color: rgba(25, 0, 255, 0.685);
       color: floralwhite;
       width: 40%;
       text-decoration: none;
