一覧ページ作成

--- a/app/assets/stylesheets/modules/recruitment.scss
+++ b/app/assets/stylesheets/modules/recruitment.scss
@@ -3,7 +3,7 @@
   margin-top: 10vh;
   padding: auto;
   &__content{
-    background-color: #808080;
+    background-color: #F4F3F4;
     height: 10rem;
     width: 80%;
     padding: 2rem;
